--- a/app/views/devise/confirmations/new.html.erb
+++ b/app/views/devise/confirmations/new.html.erb
@@ -13,4 +13,7 @@
   </div>
 <% end %>
 
-<%= render "devise/shared/links" %>
+<% content_for :sidebar do %>
+  <p>Already registered?</p>
+  <%= render "devise/shared/links" %>
+<% end  %>
