--- a/app/views/releases/index.html.erb
+++ b/app/views/releases/index.html.erb
@@ -14,7 +14,6 @@
       <th><%= model_class.human_attribute_name(:addons) %></th>
       <th><%= model_class.human_attribute_name(:collaborate) %></th>
       <th><%= model_class.human_attribute_name(:help) %></th>
-      <th><%= model_class.human_attribute_name(:notes) %></th>
       <th></th>
     </tr>
   </thead>
@@ -29,14 +28,13 @@
     <td <%= release.addons.present? ? "class = new-version" : "class = previous-version" %>><%= Release.version('addons', release.date) %></td>
     <td <%= release.collaborate.present? ? "class = new-version" : "class = previous-version" %>><%= Release.version('collaborate', release.date) %></td>
     <td <%= release.help.present? ? "class = new-version" : "class = previous-version" %>><%= Release.version('help', release.date) %></td>
-    <td><%= truncate(release.notes) || "-" %></td>
     <td>
       <%= fa_link_to "pencil","",
         edit_release_path(release), :class => 'btn btn-mini' %>
       <%= fa_link_to "trash-o", "",
         release_path(release),
         :method => :delete,
-        :data => { :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')) },
+        :data => { :confirm => t('.confirm', :default => t("helpers.links.confirm")) },
         :class => 'btn btn-mini btn-danger' %>
     </td>
     </tr>
@@ -59,22 +57,20 @@
 <dl class="dl-horizontal-left">
   <dt><strong><%= (:date).to_s.titleize %>:</strong></dt>
   <dd><%= link_to @next_release.date, release_path(@next_release) %></dd>
-  <dt><strong><%= (:accounts).to_s.titleize %>:</strong></dt>
-  <dd><%= @next_release.accounts %></dd>
-  <dt><strong><%= (:accounts_extra).to_s.titleize %>:</strong></dt>
-  <dd><%= @next_release.accounts_extra %></dd>
-  <dt><strong><%= (:addons).to_s.titleize %>:</strong></dt>
-  <dd><%= @next_release.addons %></dd>
-  <dt><strong><%= (:collaborate).to_s.titleize %>:</strong></dt>
-  <dd><%= @next_release.collaborate %></dd>
-  <dt><strong><%= (:help).to_s.titleize %>:</strong></dt>
-  <dd><%= @next_release.help %></dd>
   <dt><strong><%= (:mysageone).to_s.titleize %>:</strong></dt>
-  <dd><%= @next_release.mysageone %></dd>
+    <dd <%= @next_release.mysageone.present? ? "class = new-version" : "class = previous-version" %>><%= Release.version('mysageone', @next_release.date) %></dd>
+  <dt><strong><%= (:accounts).to_s.titleize %>:</strong></dt>
+    <dd <%= @next_release.accounts.present? ? "class = new-version" : "class = previous-version" %>><%= Release.version('accounts', @next_release.date) %></dd>
+  <dt><strong><%= (:accounts_extra).to_s.titleize %>:</strong></dt>
+    <dd <%= @next_release.accounts_extra.present? ? "class = new-version" : "class = previous-version" %>><%= Release.version('accounts_extra', @next_release.date) %></dd>
   <dt><strong><%= (:payroll).to_s.titleize %>:</strong></dt>
-  <dd><%= @next_release.payroll %></dd>
-  <dt><strong><%= (:notes).to_s.titleize %>:</strong></dt>
-  <dd><%= truncate(@next_release.notes) %></dd>
+    <dd <%= @next_release.payroll.present? ? "class = new-version" : "class = previous-version" %>><%= Release.version('payroll', @next_release.date) %></dd>
+  <dt><strong><%= (:addons).to_s.titleize %>:</strong></dt>
+    <dd <%= @next_release.addons.present? ? "class = new-version" : "class = previous-version" %>><%= Release.version('addons', @next_release.date) %></dd>
+  <dt><strong><%= (:collaborate).to_s.titleize %>:</strong></dt>
+    <dd <%= @next_release.collaborate.present? ? "class = new-version" : "class = previous-version" %>><%= Release.version('collaborate', @next_release.date) %></dd>
+  <dt><strong><%= (:help).to_s.titleize %>:</strong></dt>
+    <dd <%= @next_release.help.present? ? "class = new-version" : "class = previous-version" %>><%= Release.version('help', @next_release.date) %></dd>
 </dl>
 <% else %>
   <p>No releases match this criteria</p>
@@ -85,22 +81,20 @@
 <dl class="dl-horizontal-left">
   <dt><strong><%= (:date).to_s.titleize %>:</strong></dt>
   <dd><%= link_to @last_release.date, release_path(@last_release) %></dd>
-  <dt><strong><%= (:accounts).to_s.titleize %>:</strong></dt>
-  <dd><%= @last_release.accounts  %></dd>
-  <dt><strong><%= (:accounts_extra).to_s.titleize %>:</strong></dt>
-  <dd><%= @last_release.accounts_extra %></dd>
-  <dt><strong><%= (:addons).to_s.titleize %>:</strong></dt>
-  <dd><%= @last_release.addons %></dd>
-  <dt><strong><%= (:collaborate).to_s.titleize %>:</strong></dt>
-  <dd><%= @last_release.collaborate %></dd>
-  <dt><strong><%= (:help).to_s.titleize %>:</strong></dt>
-  <dd><%= @last_release.help %></dd>
   <dt><strong><%= (:mysageone).to_s.titleize %>:</strong></dt>
-  <dd><%= @last_release.mysageone %></dd>
+    <dd <%= @last_release.mysageone.present? ? "class = new-version" : "class = previous-version" %>><%= Release.version('mysageone', @last_release.date) %></dd>
+  <dt><strong><%= (:accounts).to_s.titleize %>:</strong></dt>
+    <dd <%= @last_release.accounts.present? ? "class = new-version" : "class = previous-version" %>><%= Release.version('accounts', @last_release.date) %></dd>
+  <dt><strong><%= (:accounts_extra).to_s.titleize %>:</strong></dt>
+    <dd <%= @last_release.accounts_extra.present? ? "class = new-version" : "class = previous-version" %>><%= Release.version('accounts_extra', @last_release.date) %></dd>
   <dt><strong><%= (:payroll).to_s.titleize %>:</strong></dt>
-  <dd><%= @last_release.payroll %></dd>
-  <dt><strong><%= (:notes).to_s.titleize %>:</strong></dt>
-  <dd><%= truncate(@last_release.notes) %></dd>
+    <dd <%= @last_release.payroll.present? ? "class = new-version" : "class = previous-version" %>><%= Release.version('payroll', @last_release.date) %></dd>
+  <dt><strong><%= (:addons).to_s.titleize %>:</strong></dt>
+    <dd <%= @last_release.addons.present? ? "class = new-version" : "class = previous-version" %>><%= Release.version('addons', @last_release.date) %></dd>
+  <dt><strong><%= (:collaborate).to_s.titleize %>:</strong></dt>
+    <dd <%= @last_release.collaborate.present? ? "class = new-version" : "class = previous-version" %>><%= Release.version('collaborate', @last_release.date) %></dd>
+  <dt><strong><%= (:help).to_s.titleize %>:</strong></dt>
+    <dd <%= @last_release.help.present? ? "class = new-version" : "class = previous-version" %>><%= Release.version('help', @last_release.date) %></dd>
 </dl>
 <% else %>
   <p>No releases match this criteria</p>
