--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -18,6 +18,10 @@ body { padding-top: 40px; }
     body { padding-top: 0px; }
 }
 
+.table-striped {
+  table-layout: fixed;
+}
+
 .sidebar-nav {
   position: absolute;
   top: 0;
