--- a/app/views/devise/passwords/edit.html.erb
+++ b/app/views/devise/passwords/edit.html.erb
@@ -16,4 +16,6 @@
   </div>
 <% end %>
 
-<%= render "devise/shared/links" %>
+<% content_for :sidebar do %>
+  <%= render "devise/shared/links" %>
+<% end %>
