--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -12,4 +12,6 @@
   </div>
 <% end %>
 
-<%= render "devise/shared/links" %>
+<% content_for :sidebar do %>
+  <%= render "devise/shared/links" %>
+<% end %>
