--- a/app/views/devise/unlocks/new.html.erb
+++ b/app/views/devise/unlocks/new.html.erb
@@ -13,4 +13,6 @@
   </div>
 <% end %>
 
-<%= render "devise/shared/links" %>
+<% content_for :sidebar do %>
+  <%= render "devise/shared/links" %>
+<% end %>
