--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -11,6 +11,7 @@
  *= require_self
  *= require_tree .
  *= require bootstrap-datetimepicker 
+ *= require bootstrap_and_overrides
  */
 
 body { padding-top: 40px; }
@@ -49,3 +50,30 @@ body { padding-top: 40px; }
 .dl-horizontal-left:after{clear:both;}
 .dl-horizontal-left dt{float:left;width:120px;clear:left;text-align:left;overflow:hidden;text-overflow:ellipsis;white-space:nowrap;}
 .dl-horizontal-left dd{margin-left:120px;}
+
+/* User sign in and sign forms. */
+.border-form-div {
+  max-width: 400px;
+  padding: 19px 29px 29px;
+  margin: 0 auto 20px;
+  background-color: #fff;
+  border: 1px solid #e5e5e5;
+  -webkit-border-radius: 5px;
+     -moz-border-radius: 5px;
+          border-radius: 5px;
+  -webkit-box-shadow: 0 1px 2px rgba(0,0,0,.05);
+     -moz-box-shadow: 0 1px 2px rgba(0,0,0,.05);
+          box-shadow: 0 1px 2px rgba(0,0,0,.05);
+}
+.border-form-div .form-signin-heading,
+.border-form-div .checkbox {
+  margin-bottom: 10px;
+}
+.border-form-div input[type="text"],
+.border-form-div input[type="email"],
+.border-form-div input[type="password"] {
+  font-size: 16px;
+  height: auto;
+  margin-bottom: 10px;
+  padding: 7px 9px;
+}
