--- a/app/views/devise/confirmations/new.html.erb
+++ b/app/views/devise/confirmations/new.html.erb
@@ -1,19 +1,13 @@
-<h2>Resend confirmation instructions</h2>
+<div class="border-form-div">
+  <h2>Resend confirmation instructions</h2>
 
-<%= simple_form_for(resource, :as => resource_name, :url => confirmation_path(resource_name), :html => { :method => :post }) do |f| %>
-  <%= f.error_notification %>
+  <%= simple_form_for(resource, :as => resource_name, :url => confirmation_path(resource_name), :html => { :method => :post }) do |f| %>
+    <%= f.error_notification %>
   <%= f.full_error :confirmation_token %>
 
-  <div class="form-inputs">
-    <%= f.input :email, :required => true, :autofocus => true %>
-  </div>
+  <%= f.input :email, :required => true, :autofocus => true, :placeholder => 'Email Address', :label => false %>
 
-  <div class="form-actions">
-    <%= f.button :submit, "Resend confirmation instructions" %>
-  </div>
+  <%= f.button :submit, "Resend confirmation instructions" %>
+  <%= link_to "Back", :back, :class => 'btn btn-danger' %>
 <% end %>
-
-<% content_for :sidebar do %>
-  <p>Already registered?</p>
-  <%= render "devise/shared/links" %>
-<% end  %>
+</div>
