--- a/app/views/devise/passwords/edit.html.erb
+++ b/app/views/devise/passwords/edit.html.erb
@@ -1,3 +1,4 @@
+<div class="border-form-div">
 <h2>Change your password</h2>
 
 <%= simple_form_for(resource, :as => resource_name, :url => password_path(resource_name), :html => { :method => :put }) do |f| %>
@@ -6,16 +7,10 @@
   <%= f.input :reset_password_token, :as => :hidden %>
   <%= f.full_error :reset_password_token %>
 
-  <div class="form-inputs">
-    <%= f.input :password, :label => "New password", :required => true, :autofocus => true %>
-    <%= f.input :password_confirmation, :label => "Confirm your new password", :required => true %>
-  </div>
+  <%= f.input :password, :label => "New password", :required => true, :autofocus => true %>
+  <%= f.input :password_confirmation, :label => "Confirm your new password", :required => true %>
 
-  <div class="form-actions">
-    <%= f.button :submit, "Change my password" %>
-  </div>
+  <%= f.button :submit, "Change my password" %>
+  <%= link_to "Back", :back, :class => 'btn btn-danger' %>
 <% end %>
-
-<% content_for :sidebar do %>
-  <%= render "devise/shared/links" %>
-<% end %>
+</div>
