--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,19 +1,14 @@
-<h2>Sign up</h2>
+<div class="border-form-div">
+  <h2>Sign up</h2>
+  <p>On completion of sign up, a message with a confirmation link will be sent to your email address. Please open the link to activate your account.</p>
 
-<%= simple_form_for(resource, :as => resource_name, :url => registration_path(resource_name)) do |f| %>
-  <%= f.error_notification %>
+  <%= simple_form_for(resource, :as => resource_name, :url => registration_path(resource_name)) do |f| %>
+    <%= f.error_notification %>
 
-  <div class="form-inputs">
-    <%= f.input :email, :required => true, :autofocus => true %>
-    <%= f.input :password, :required => true %>
-    <%= f.input :password_confirmation, :required => true %>
-  </div>
-
-  <div class="form-actions">
-    <%= f.button :submit, "Sign up", :class => "btn btn-info" %>
-  </div>
-<% end %>
-
-<% content_for :sidebar do %>
-  <%= render "devise/shared/links" %>
-<% end %>
+  <%= f.input :email, :required => true, :autofocus => true, :placeholder => 'Email address', :label => false %>
+  <%= f.input :password, :required => true, :placeholder => 'Password', :label => false %>
+  <%= f.input :password_confirmation, :required => true, :placeholder => 'Confirm Password', :label => false %>
+  <%= f.button :submit, "Sign up", :class => "btn btn-info" %>
+  <%= link_to "Back", :back, :class => 'btn btn-danger' %>
+  <% end %>
+</div>
