--- a/app/views/releases/_form.html.erb
+++ b/app/views/releases/_form.html.erb
@@ -1,4 +1,4 @@
-<%= simple_form_for @release, :html => { :class => 'form-vertical' } do |f| %>
+<%= simple_form_for @release do |f| %>
   <%= f.input :date, :as => :date_picker %>
   <%= f.input :mysageone %>
   <%= f.input :accounts %>
