--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -15,33 +15,8 @@
  */
 
 body { padding-top: 40px; }
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 1024px) {
     body { padding-top: 0px; }
-}
-
-.table-striped {
-  table-layout: fixed;
-}
-
-.sidebar-nav {
-  position: absolute;
-  top: 0;
-  width: 250px;
-  list-style: none;
-  margin: 0;
-  padding: 0;
-}
-
-
-#sidebar-wrapper {
-  margin-right: -10px;
-  right: 0px;
-  width: 300px;
-  position: fixed;
-  height: 100%;
-  overflow-y: auto;
-  z-index: 1000;
-  transition: all 0.4s ease 0s;
 }
 
 .dl-horizontal-left{*zoom:1;}.dl-horizontal:before,.dl-horizontal:after{display:table;content:"";line-height:0;}
@@ -53,9 +28,10 @@ body { padding-top: 40px; }
 
 /* User sign in and sign forms. */
 .border-form-div {
+  text-align: center;
   max-width: 400px;
   padding: 19px 29px 29px;
-  margin: 0 auto 20px;
+  margin: 5% auto 20px;
   background-color: #fff;
   border: 1px solid #e5e5e5;
   -webkit-border-radius: 5px;
@@ -77,3 +53,24 @@ body { padding-top: 40px; }
   margin-bottom: 10px;
   padding: 7px 9px;
 }
+
+.simple_form label {  
+  float: left;  
+  width: 100px;  
+  text-align: right;  
+  margin: 2px 10px;  
+  font-weight: bold;
+}  
+  
+.simple_form div.input {  
+  margin-bottom: 10px;  
+}  
+  
+.simple_form div.boolean, .simple_form input[type='submit'] {  
+  margin-left: 120px;  
+}  
+  
+.simple_form div.boolean label {  
+  float: none;  
+  margin: 0;  
+}  
