--- a/app/views/devise/passwords/edit.html.erb
+++ b/app/views/devise/passwords/edit.html.erb
@@ -7,10 +7,9 @@
   <%= f.input :reset_password_token, :as => :hidden %>
   <%= f.full_error :reset_password_token %>
 
-  <%= f.input :password, :label => "New password", :required => true, :autofocus => true %>
-  <%= f.input :password_confirmation, :label => "Confirm your new password", :required => true %>
+  <%= f.input :password, :label => false, :required => true, :autofocus => true, :placeholder => "Password" %>
+  <%= f.input :password_confirmation, :label => false, :required => true, :placeholder => "Confirm Password" %>
 
   <%= f.button :submit, "Change my password" %>
-  <%= link_to "Back", :back, :class => 'btn btn-danger' %>
 <% end %>
 </div>
