--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -4,8 +4,7 @@
 <%= simple_form_for(resource, :as => resource_name, :url => password_path(resource_name), :html => { :method => :post }) do |f| %>
   <%= f.error_notification %>
 
-  <%= f.input :email, :required => true, :autofocus => true %>
+  <%= f.input :email, :required => true, :autofocus => true, :label => false, :placeholder => "Email" %>
   <%= f.button :submit, "Send me reset password instructions" %>
-  <%= link_to "Back", :back, :class => 'btn btn-danger' %>
 <% end %>
 </div>
