--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,17 +18,27 @@
 </head>
 <body>
 
-<div class="navbar navbar-fixed-top">
-  <div class="navbar-inner">
-    <div class="container">
-      <a class="btn btn-navbar" data-target=".nav-collapse" data-toggle="collapse">
-        <span class="icon-bar"></span>
-      </a>
-      <a class="brand" href="/">VersionKeeper</a>
-      <div class="container nav-collapse">
-        <ul class="nav">
-        </ul>
-      </div><!--/.nav-collapse -->
+<div class="container span12">
+  <div class="navbar navbar-fixed-top">
+    <div class="navbar-inner">
+      <div class="container">
+          <a class="brand" href="/">VersionKeeper</a>
+          <ul class="nav pull-right">
+            <% if user_signed_in? %>
+              <li class="dropdown">
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown">Logged in as: <%= current_user.email %><b class="caret"></b></a>
+            <ul class="dropdown-menu">
+              <li><%= link_to ("Edit Account"), edit_user_registration_path , :id=>"Edit account"%></li>
+              <li class="divider"></li>
+              <li><%= link_to 'Logout', destroy_user_session_path, :method=>'delete', :id => "Logout" %></li>
+            </ul>
+            </li>
+          <% else %>
+              <li> <%= link_to 'Login', new_user_session_path %> </li>
+            <li> <%= link_to 'Sign up', new_user_registration_path %> </li>
+          <% end %>
+          </ul>
+      </div>
     </div>
   </div>
 </div>
@@ -39,24 +49,6 @@
       <%= bootstrap_flash %>
       <%= yield %>
     </div>
-    <div id="sidebar-wrapper">
-      <div class="well sidebar-nav">
-        <center><div class="btn-group">
-        <% if user_signed_in? %>
-          <button type="button" class="btn btn-info"><%= current_user.email %></button>
-          <button type="button" class="btn btn-info dropdown-toggle" data-toggle="dropdown">
-            <span class="caret"></span>
-          </button>
-          <ul class="dropdown-menu" role="menu">
-            <li>
-            <%= link_to 'Sign out', destroy_user_session_path, :method => :delete %>
-          <% end %>
-            </li>
-          </ul>
-        </div></center>
-        <%= yield :sidebar %>
-      </div><!--/.well -->
-    </div><!--/span-->
   </div><!--/row-->
 </div> <!-- /container -->
 
