--- a/app/views/releases/edit.html.erb
+++ b/app/views/releases/edit.html.erb
@@ -1,5 +1,6 @@
 <%- model_class = Release -%>
 <div class="page-header">
   <h1><%=t '.title', :default => [:'helpers.titles.edit', 'Edit %{model}'], :model => model_class.model_name.human.titleize %></h1>
+  <p><%= I18n.t('releases.new_edit') %></p>
 </div>
 <%= render :partial => 'form' %>
