--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -5,19 +5,20 @@
     <%= f.error_notification %>
 
   <div class="form-inputs">
-    <%= f.input :email, :required => true, :autofocus => true %>
-
+    <%= f.input :email, :required => true, :autofocus => true, :placeholder => 'Email address', :label => false %>
+    <br />
     <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
       <p>Currently waiting confirmation for: <%= resource.unconfirmed_email %></p>
   <% end %>
 
-    <%= f.input :password, :autocomplete => "off", :hint => "leave it blank if you don't want to change it", :required => false %>
-    <%= f.input :password_confirmation, :required => false %>
-    <%= f.input :current_password, :hint => "we need your current password to confirm your changes", :required => true %>
+    <%= f.input :password, :autocomplete => "off", :hint => "Leave it blank if you don't want to change it", :required => false, :placeholder => 'New Password', :label => false %>
+    <%= f.input :password_confirmation, :required => false, :placeholder => 'New Password Confirmation', :label => false %>
+    <br />
+    <%= f.input :current_password, :hint => "We need your current password to confirm your changes", :required => true, :placeholder => 'Current Password', :label => false %>
   </div>
 
-  <div class="form-actions">
-    <%= f.button :submit, "Update" %>
+  <div>
+    <%= f.button :submit, "Update", :class => 'btn btn-primary' %>
     <%= link_to "Back", :back, :class => 'btn btn-danger' %>
   </div>
 <% end %>
@@ -25,5 +26,4 @@
   <h3>Cancel my account</h3>
 
   <p>Unhappy? <%= link_to "Cancel my account", registration_path(resource_name), :data => { :confirm => "Are you sure?" }, :method => :delete %></p>
-  <%= link_to "Back", :back, :class => 'btn btn-danger' %>
 </div>
